# nrsms

./: .gitignore  README.md  docker-compose.yml  netlify.toml  render.yaml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  seed.py  seed_stations.py  stats.xlsx
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: audit.py  auth.py  reports.py  stations.py  submissions.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/crud/: station.py  submission.py  user.py
backend/app/db/: base.py  session.py
backend/app/models/: audit_log.py  station.py  submission.py  user.py
backend/app/schemas/: audit_log.py  station.py  submission.py  user.py
backend/app/services/: audit.py  computation.py  export.py  validation.py
backend/migrations/: README  env.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: audit.ts  auth.ts  client.ts  reports.ts  stations.ts  submissions.ts  users.ts
frontend/src/components/auth/: RequireAuth.tsx
frontend/src/components/forms/: StationPicker.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.ts  useOfflineQueue.ts
frontend/src/pages/: AuditLog.tsx  ChangePassword.tsx  Dashboard.tsx  Login.tsx  NewSubmission.tsx  Reports.tsx  Stations.tsx  Submissions.tsx  Users.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
